# Wildbeater

./: README.md  pyproject.toml
NeuralModule/: classify.py
ParserModule/: funcs.py  parse.py
UtilityModule/: sortByColour.py
wildbeater/: cli.py
